# AllIn1

./: .gitignore  CMakeLists.txt
cppParse/: CMakeLists.txt
cppParse/include/cppParse/: argument.hpp  help_formatter.hpp  parser.hpp
cppParse/src/: argument.cpp  help_formatter.cpp  parser.cpp
include/common/: error_utils.hpp  errors.hpp  permission_utils.hpp  platform.hpp  string_utils.hpp
include/io/: create.hpp  errors.hpp  io.hpp  permission.hpp  shortcut.hpp  symlink.hpp  version.hpp
src/: main.cpp
src/common/: error_utils.cpp  errors.cpp  permission_utils.cpp  platform.cpp  string_utils.cpp
src/io/: create.cpp  io.cpp  permission.cpp  shortcut.cpp  symlink.cpp
